--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </ul>
   <button id="taskButton">Add Task</button>
   <input type="text" id="taskInput">
+  <button id="download">Download</button>
   <script src="script.js"></script>
 </body>
 </html>
