--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <h1>To-Do:</h1>
-  <ul id="taskList">
-  </ul>
+  <p id="completedTasks">Total Completed Tasks: </p>
   <button id="taskButton">Add Task</button>
   <input type="text" id="taskInput">
   <button id="download">Download</button>
+  <ul id="taskList">
+  </ul>
   <script src="script.js"></script>
 </body>
 </html>
